@@ -12,16 +12,14 @@ import mezz.jei.api.recipe.category.IRecipeCategory;
 import net.minecraft.world.item.ItemStack;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
-/**
- * @author LatvianModder
- */
 public enum LootCrateRecipeManagerPlugin implements IRecipeManagerPlugin {
     INSTANCE;
 
     private final List<WrappedLootCrate> wrappedLootCratesCache = new ArrayList<>();
+    private final ItemStackToListCache<WrappedLootCrate> inputCache = new ItemStackToListCache<>();
+    private final ItemStackToListCache<WrappedLootCrate> outputCache = new ItemStackToListCache<>();
     private final List<ItemStack> crates = new ArrayList<>();
     private boolean needsRefresh = true;
 
@@ -31,10 +29,6 @@ public enum LootCrateRecipeManagerPlugin implements IRecipeManagerPlugin {
             needsRefresh = false;
         }
         return wrappedLootCratesCache;
-    }
-
-    public void refresh() {
-        needsRefresh = true;
     }
 
     public void rebuildWrappedLootCrateCache() {
@@ -62,16 +56,29 @@ public enum LootCrateRecipeManagerPlugin implements IRecipeManagerPlugin {
         }
     }
 
+    public void refresh() {
+        needsRefresh = true;
+        inputCache.clear();
+        outputCache.clear();
+    }
+
     @Override
     public <V> List<RecipeType<?>> getRecipeTypes(IFocus<V> focus) {
+        if (focus.getTypedValue().getIngredient() instanceof ItemStack stack
+                && focus.getRole() == RecipeIngredientRole.INPUT
+                && stack.getItem() == FTBQuestsItems.LOOTCRATE.get())
+        {
+            return List.of(JEIRecipeTypes.LOOT_CRATE);
+        }
+
         return List.of();
     }
 
     @Override
     public <T, V> List<T> getRecipes(IRecipeCategory<T> recipeCategory, IFocus<V> focus) {
         if (recipeCategory instanceof LootCrateCategory && focus.getTypedValue().getIngredient() instanceof ItemStack stack) {
-            // safe to cast here since we've checked the category
             if (stack.getItem() == FTBQuestsItems.LOOTCRATE.get() && focus.getRole() == RecipeIngredientRole.CATALYST) {
+                // safe to cast here since we've checked the category
                 //noinspection unchecked
                 return (List<T>) getWrappedLootCrates();
             }
@@ -80,31 +87,30 @@ public enum LootCrateRecipeManagerPlugin implements IRecipeManagerPlugin {
                         (List<T>) findCratesWithInput(stack);
                 case OUTPUT -> //noinspection unchecked
                         (List<T>) findCratesWithOutput(stack);
-                default -> Collections.emptyList();
+                default -> List.of();
             };
         }
-        return Collections.emptyList();
-    }
-
-    private List<WrappedLootCrate> findCratesWithInput(ItemStack stack) {
-        return getWrappedLootCrates().stream()
-                .filter(c -> ItemStack.isSame(c.crateStack, stack))
-                .toList();
-    }
-
-    private List<WrappedLootCrate> findCratesWithOutput(ItemStack stack) {
-        return getWrappedLootCrates().stream()
-                .filter(c -> c.outputs.stream().anyMatch(s1 -> ItemStack.isSame(s1, stack)))
-                .toList();
+        return List.of();
     }
 
     @Override
     public <T> List<T> getRecipes(IRecipeCategory<T> recipeCategory) {
-        if (recipeCategory instanceof LootCrateCategory) {
-            // safe to cast here since we've checked the category
-            //noinspection unchecked
-            return (List<T>) getWrappedLootCrates();
-        }
-        return Collections.emptyList();
+        // safe to cast here since we've checked the category
+        //noinspection unchecked
+        return recipeCategory instanceof LootCrateCategory ? (List<T>) getWrappedLootCrates() : List.of();
+    }
+
+    private List<WrappedLootCrate> findCratesWithInput(ItemStack stack) {
+        return inputCache.getList(stack, k -> getWrappedLootCrates().stream()
+                .filter(c -> ItemStack.isSameItemSameTags(c.crateStack, stack))
+                .toList()
+        );
+    }
+
+    private List<WrappedLootCrate> findCratesWithOutput(ItemStack stack) {
+        return outputCache.getList(stack, k -> getWrappedLootCrates().stream()
+                .filter(c -> c.outputs.stream().anyMatch(s1 -> ItemStack.isSameItemSameTags(s1, stack)))
+                .toList()
+        );
     }
 }
